# polars_uc_benchmark

./: .gitignore  README.md  databricks.yml  project_config.yml  pyproject.toml  requirements.txt
notebooks/: init_benchmark_uc.py  run_notebooks.py  run_polars_against_uc.py  run_spark_sql_against_uc.py
scripts/: init_benchmark_uc.py  run_polars_against_uc.py  run_pyspark_against_uc.py
src/polars_pyspark_uc/: config.py  helpers.py  init_benchmark.py
